Enhance report handling and inheritance in modification processing (#878)
Signed-off-by: achour94 <berrahmaachour@gmail.com>